--- a/case-study.html
+++ b/case-study.html
@@ -270,8 +270,7 @@
           Telemetry data is generated continuously and at a high frequency. Therefore, the database needs to be able to handle this high write intensity while also being able to query data when required. Should the frequency of the incoming data surpass the processing capability of the database, it may be wise to consider the implementation of either a queue or event bus to manage the data influx. Both these options also provide the benefit of reducing the possibility of data being dropped if there is a database backlog or being lost if the database goes down.
         </p>
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: zoomed out example of the production application running, exporter shipping the telemetry data to a connector and storing the data</figcaption>
+          <img src="assets/images/case-study/shipping.png" class="case-study-image" />
         </figure>
         <br>
         <h4>The Presentation Stage</h4>
