Added overwhelming UIs & fixed GIFs

--- a/case-study.html
+++ b/case-study.html
@@ -319,8 +319,7 @@
           Additionally, both NewRelic and DataDog are so feature-rich that their UIs are overwhelming for someone unaccustomed to observability. They have a steep learning curve that requires the user to know exactly what they want and hunt it down. Oliver doesn’t need lots of bells and whistles. He just wants to see basic requests per second, error count, latency health, and the traces behind them. Even if Evo T-shirts was willing to pay for these big services, it would be overkill for their needs. For them, the income generated would be better spent on improving the products and raising the business profile through marketing.
         </p>
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: Filler to where an image should go</figcaption>
+          <img src="assets/images/case-study/overwhelming-uis.png" class="case-study-image" />
         </figure>
         <br />
         <p>
@@ -410,7 +409,7 @@
           <li>Latency Health over 10 seconds</li>
         </ul>
         <figure>
-          <img src="assets/images/case-study/gif-of-ui-1.gif" class="case-study-image" />
+          <img src="assets/images/case-study/gif-of-UI-1.gif" class="case-study-image" />
           <figcaption>Fig. #: Interacting with the Horus Metrics and Traces</figcaption>
         </figure>
         <br>
@@ -426,7 +425,7 @@
           Want more information on a particular trace? Just click the trace you’re interested in and you’ll be directed to a waterfall chart where you can compare each of the spans and get any further details you require. 
         </p>
         <figure>
-          <img src="assets/images/case-study/gif-of-ui-2.gif" class="case-study-image" />
+          <img src="assets/images/case-study/gif-of-UI-2.gif" class="case-study-image" />
           <figcaption>Fig. #: Interacting with the Horus Traces and Single Trace</figcaption>
         </figure>
         <br>
