All images uploaded — Round 1

--- a/case-study.html
+++ b/case-study.html
@@ -102,7 +102,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/no-errors.gif" class="case-study-image" />
-          <figcaption>Fig. 1: Part of Evo T-Shirt's architecture</figcaption>
+          <figcaption>Part of Evo T-Shirt's architecture</figcaption>
         </figure>
         <br />
         <p>
@@ -117,7 +117,7 @@
           Several engineers on his team try recreating the problem, too. Some of them receive the same errors customers were complaining about, while others do not. They’re not sure why it’s happening for some and not others. Oliver’s last resort is to look at the logs of each microservice, hoping they’ll contain information about the alleged errors. 
         </p>
         <figure>
-          <img src="assets/images/case-study/endless-logs.png" class="case-study-image" />
+          <img src="assets/images/case-study/endless-logs.jpg" class="case-study-image" />
         </figure>
         <br />
         <p>
@@ -172,7 +172,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/metric-example.png" class="case-study-image" />
-          <figcaption>Fig. #: A metric graph from DataDog</figcaption>
+          <figcaption>A metric graph from DataDog</figcaption>
         </figure>
         <br />
         <p>
@@ -195,7 +195,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/trace-example.png" class="case-study-image" />
-          <figcaption>Fig. #: A distributed trace from DataDog</figcaption>
+          <figcaption>A distributed trace from DataDog</figcaption>
         </figure>
         <br />
 
@@ -229,7 +229,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/evo-with-horus.gif" class="case-study-image" />
-          <figcaption>Fig. #: Evo T-Shirts with Horus instruementation via horus agent</figcaption>
+          <figcaption>Evo T-Shirts with Horus instruementation via horus agent</figcaption>
         </figure>
         <br>
         <p>
@@ -246,7 +246,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/telemetry-pipeline.png" class="case-study-image" />
-          <figcaption>Fig. #: The Telemetry Pipeline</figcaption>
+          <figcaption>The Telemetry Pipeline</figcaption>
         </figure>
         <br>
         <h4>The Emitting Stage</h4>
@@ -307,8 +307,8 @@
           Their polished UIs include dashboards that display a range of metrics and trace sections that allow filtering and deep-dives (reminder: that’s what Oliver wants!). Many of these third-party services (including NewRelic and DataDog) go beyond metrics and traces and include both logs and events with dedicated sections, dashboards, correlations, and graphs. They often have extensive documentation to get the user up and running. 
         </p>
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: NewRelic/DD logos? Or showing overwhelming UIs?</figcaption>
+          <img src="assets/images/case-study/documentation.gif" class="case-study-image" />
+          <figcaption>NewRelic Documentation</figcaption>
         </figure>
         <br />
         <p>
@@ -345,7 +345,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/comparison-saas-diy.png" class="case-study-image" />
-          <figcaption>Fig. #: Comparison of SaaS and DIY options</figcaption>
+          <figcaption>Comparison of SaaS and DIY options</figcaption>
         </figure>
         <br />
         <p>
@@ -366,7 +366,6 @@
         <br />
         <figure>
           <img src="assets/images/case-study/logo-color.png" class="case-study-image case-study-image-smaller" />
-          <figcaption>Fig. #: Horus</figcaption>
         </figure>
         <p>
           Designed with the user in mind, it makes the integration, generation, and visualization of application monitoring seamless and straightforward. 
@@ -386,7 +385,7 @@
         <br />
         <figure>
           <img src="assets/images/case-study/horus-docker.png" class="case-study-image" />
-          <figcaption>Fig. #: Horus infrastructure in a Docker network</figcaption>
+          <figcaption>Horus infrastructure in a Docker network</figcaption>
         </figure>
         <p>
           Horus removes the friction of combining components like Jaeger, Prometheus, and Grafana together to achieve observability by providing purpose-built components that reduce the potential set up time from hours or days to minutes. 
@@ -410,7 +409,7 @@
         </ul>
         <figure>
           <img src="assets/images/case-study/gif-of-UI-1.gif" class="case-study-image" />
-          <figcaption>Fig. #: Interacting with the Horus Metrics and Traces</figcaption>
+          <figcaption>Interacting with the Horus Metrics and Traces</figcaption>
         </figure>
         <br>
         <p>
@@ -426,7 +425,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/gif-of-UI-2.gif" class="case-study-image" />
-          <figcaption>Fig. #: Interacting with the Horus Traces and Single Trace</figcaption>
+          <figcaption>Interacting with the Horus Traces and Single Trace</figcaption>
         </figure>
         <br>
         <p>
@@ -439,7 +438,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/evo-with-horus.gif" class="case-study-image" />
-          <figcaption>Fig. #: Evo T-Shirts with Horus instrumentation</figcaption>
+          <figcaption>Evo T-Shirts with Horus instrumentation</figcaption>
         </figure>
         <br>
 
@@ -450,7 +449,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/generic-full-horus.png" class="case-study-image" />
-          <figcaption>Fig. #: The full Horus infrastrcture + Horus instrumented in a microservice application</figcaption>
+          <figcaption>The full Horus infrastrcture + Horus instrumented in a microservice application</figcaption>
         </figure>
         <br>
         <h4>Horus Agent</h4>
@@ -459,7 +458,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/evo-with-horus.gif" class="case-study-image" />
-          <figcaption>Fig. #: Evo T-Shirts with horus agent installed</figcaption>
+          <figcaption>Evo T-Shirts with horus agent installed</figcaption>
         </figure>
         <br>
         <p>
@@ -488,7 +487,6 @@
         </p>
         <figure>
           <img src="assets/images/case-study/opentelemetry.svg" class="case-study-imagen case-study-image-smaller" />
-          <figcaption>Fig. #: OpenTelemetry</figcaption>
         </figure>
         <br>
         <p>
@@ -509,7 +507,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/connector.png" class="case-study-image" />
-          <figcaption>Fig. #: Horus connector</figcaption>
+          <figcaption>Horus connector</figcaption>
         </figure>
         <br>
         <p>
@@ -526,7 +524,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/database.png" class="case-study-image" />
-          <figcaption>Fig. #: Horus Database — replace with newer image (sans relational)</figcaption>
+          <figcaption>Horus Database — replace with newer image (sans relational)</figcaption>
         </figure>
         <br>
         <p>
@@ -547,7 +545,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/UI.png" class="case-study-image" />
-          <figcaption>Fig. #: Horus UI</figcaption>
+          <figcaption>Horus UI</figcaption>
         </figure>
         <br>
         <p>
@@ -563,7 +561,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/ui-overview.gif" class="case-study-image" />
-          <figcaption>Fig. #: Overview of Horus UI</figcaption>
+          <figcaption>Overview of Horus UI</figcaption>
         </figure>
         <br>
         <p>
@@ -602,7 +600,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/many-traces-schema.png" class="case-study-image" />
-          <figcaption>Fig. #: A potential traces array stored across all three metric datapoints</figcaption>
+          <figcaption>A potential traces array stored across all three metric datapoints</figcaption>
         </figure>
         <br>
         <p>
@@ -610,7 +608,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/chronosphere-architecture.png" class="case-study-image" />
-          <figcaption>Fig. #: Chronosphere Architecture</figcaption>
+          <figcaption>Chronosphere Architecture</figcaption>
         </figure>
         <br>
         <p>
@@ -644,7 +642,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/different-timezones.png" class="case-study-image" />
-          <figcaption>Fig. #: At the same moment, two different times can be produced with <code>Date()</code></figcaption>
+          <figcaption>At the same moment, two different times can be produced with <code>Date()</code></figcaption>
         </figure>
         <br>
         <p>
@@ -665,7 +663,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/missing-traces.gif" class="case-study-image" />
-          <figcaption>Fig. #: Traces seem to be "missing" when there are metrics due to a timezone discrepancy</figcaption>
+          <figcaption>Traces seem to be "missing" when there are metrics due to a timezone discrepancy</figcaption>
         </figure>
         <br>
         <p>
@@ -694,7 +692,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/alternate-full.png" class="case-study-image" />
-          <figcaption>Fig. #: Two options of architecture: with Grafana or with a custom UI</figcaption>
+          <figcaption>Two options of architecture: with Grafana or with a custom UI</figcaption>
         </figure>
         <br>
         <p>
@@ -706,7 +704,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/alternate-grafana.png" class="case-study-image" />
-          <figcaption>Fig. #: Alternative architecture that includes Grafana</figcaption>
+          <figcaption>Alternative architecture that includes Grafana</figcaption>
         </figure>
         <br>
         <p>
@@ -718,7 +716,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/alternate-horus.png" class="case-study-image" />
-          <figcaption>Fig. #: The architecture we chose that includes a custom UI</figcaption>
+          <figcaption>The architecture we chose that includes a custom UI</figcaption>
         </figure>
         <br>
         <p>
@@ -742,7 +740,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/ui-overview.gif" class="case-study-image" />
-          <figcaption>Fig. #: Overview of Horus UI</figcaption>
+          <figcaption>Overview of Horus UI</figcaption>
         </figure>
         <br>
         <!-- Section 6 -->
@@ -785,7 +783,6 @@
         <figure>
           <img src="assets/images/case-study/docker-compose-simple.gif" class="case-study-image" />
         </figure>
-        <br>
         <p>
           This deploys the full Horus infrastructure within a Docker network.
         </p>
